--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -28,6 +28,7 @@
     padding: 0 2px 6px;
     transition: all .3s;
     @extend %roboto-400;
+
     &:hover {
       color: $accent;
       border-bottom: 1px solid $accent;
@@ -49,7 +50,7 @@
     position: relative;
   }
 
-  &__link + &__link {
+  &__link+&__link {
     padding-left: 25px;
   }
 
@@ -68,6 +69,122 @@
   }
 }
 
+.footer {
+  background-color: $bg;
+}
+
+.footer-top {
+  padding: 70px 0 40px;
+  border-bottom: 1px solid #ececec;
+  display: flex;
+  justify-content: space-between;
+
+  &__contact {
+    width: 250px;
+    margin-right: 50px;
+  }
+
+  &__nav {
+    width: 170px;
+    margin-right: 30px;
+  }
+
+  &__item-form {
+    width: 460px;
+  }
+
+  &__logo {
+    margin-bottom: 33px;
+    display: inline-block;
+  }
+
+  &__adress,
+  &__email,
+  &__phone {
+    margin-bottom: 14px;
+    display: inline-block;
+  }
+
+  &__social-list {
+    display: flex;
+    align-items: center;
+    margin-top: 30px;
+  }
+
+  &__social-item+&__social-item {
+    margin-left: 18px;
+  }
+
+  &__social-link {
+    path {
+      transition: all .3s;
+      fill: $default;
+    }
+
+    &:hover {
+      path {
+        fill: $accent;
+      }
+    }
+  }
+
+  &__title {
+    color: $title;
+    @extend %roboto-400;
+    margin-bottom: 45px;
+    font-size: 22px;
+  }
+
+  &__link {
+    margin-bottom: 14px;
+    display: block;
+  }
+
+  &__text {
+    margin-bottom: 25px;
+  }
+
+  &__form-input {
+    background-color: #fff;
+    max-width: 310px;
+    width: 100%;
+    border: none;
+    box-shadow: 0px 7px 20px 0px rgba(192, 192, 192, 0.3);
+    padding: 13px 10px 13px 10px;
+
+    &::placeholder {
+      color: $default;
+      font-size: 16px;
+    }
+  }
+
+  &__form-btn {
+    text-transform: uppercase;
+    border: none;
+    background-color: $accent;
+    color: #fff;
+    box-shadow: 0px 7px 20px 0px rgba(255, 17, 48, 0.3);
+    padding: 13px 26px;
+    cursor: pointer;
+  }
+}
+
+.footer-bottom {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 75px;
+  font-size: 12px;
+
+  &__accept {
+    display: flex;
+    align-items: center;
+  }
+
+  &__accept-img {
+    margin-left: 25px;
+  }
+}
 
 
 
