added categories section

--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -28,3 +28,24 @@ a {
   line-height: 26px;
   @extend %quicksand-500;
 }
+
+
+.title,
+.text {
+  max-width: 570px;
+  margin: 0 auto;
+  text-align: center;
+}
+
+.title {
+  color: $title;
+  @extend %roboto-700;
+  font-size: 48px;
+  line-height: 65px;
+  margin-bottom: 10px;
+  text-transform: uppercase;
+}
+
+.text {
+  margin-bottom: 55px;
+}
