--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -182,10 +182,9 @@
 }
 
 .top-slider {
-  background-image: url('../images/top-slider-bg.png');
+  background-image: url('../images/decor/top-slider-bg.png');
   background-repeat: no-repeat;
   background-size: cover;
-  // background-position: center center;
   background-color: $bg;
   padding: 65px 0 45px;
 
@@ -265,15 +264,170 @@
         }
       }
     }
+  }
+}
 
+
+.categories-info {
+  padding: 120px 0;
+  background-image: url('../images/decor/categories-left-bg.png');
+  background-repeat: no-repeat;
+  background-position: left center;
+
+  &__inner {
+    background-image: url('../images/decor/categories-right-bg.png');
+    background-repeat: no-repeat;
+    background-position: right center;
+  }
+}
+
+.info {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 110px;
+  position: relative;
+
+  &::before,
+  &::after {
+    content: '';
+    position: absolute;
+  }
+
+  &::before {
+    background-image: url('../images/decor/info-before-bg.svg');
+    top: -40px;
+    left: -45px;
+    width: 120px;
+    height: 121px;
+  }
+
+  &::after {
+    background-image: url('../images/decor/info-after-bg.svg');
+    bottom: -23px;
+    right: -23px;
+    width: 65px;
+    height: 52px;
+  }
+
+
+  &__item {
+    background-color: #fff;
+    padding: 60px 40px;
+    width: 370px;
+    box-shadow: 20px 0px 60px 0px rgba(202, 202, 202, 0.35);
+    z-index: 1;
+  }
+
+  &__item-title {
+    @extend %roboto-400;
+    color: $title;
+    font-size: 22px;
+    margin: 35px 0 15px;
+  }
+}
+
+.categories {
+
+  &__items {
+    display: grid;
+    min-height: 635px;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    grid-gap: 30px;
+  }
+
+  &__item {
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
+    padding: 40px;
+
+    .categories__item-link:hover {
+      padding-bottom: 3px;
+    }
+
+    &:nth-child(1) {
+      grid-row: span 2;
+
+      .categories__item-subtitle {
+        color: #5800e4;
+      }
+
+      .categories__item-link:hover {
+        color: #5800e4;
+        border-bottom: 1px solid #5800e4;
+      }
+    }
+
+    &:nth-child(2) {
+      grid-column: span 2;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: flex-start;
+
+      .categories__item-subtitle {
+        color: $accent;
+      }
+
+      .categories__item-link:hover {
+        color: $accent;
+        border-bottom: 1px solid $accent;
+      }
+    }
+
+    &:nth-child(3) {
+      .categories__item-subtitle {
+        color: #ffb534;
+      }
+
+      .categories__item-link:hover {
+        color: #ffb534;
+        border-bottom: 1px solid #ffb534;
+      }
+    }
+
+    &:nth-child(4) {
+      .categories__item-subtitle {
+        color: #34c3ff;
+      }
+
+      .categories__item-link:hover {
+        color: #34c3ff;
+        border-bottom: 1px solid #34c3ff;
+      }
+    }
+  }
+
+  &__item-subtitle {
+    margin-bottom: 5px;
+  }
+
+  &__item-title,
+  &__item-link:hover {
+    @extend %roboto-500;
+  }
+
+  &__item-title {
+    color: $title;
+    font-size: 22px;
+    margin-bottom: 8px;
+  }
+
+  &__item-link {
+    @extend %roboto-400;
+    color: $title;
+    text-transform: uppercase;
+    transition: all .3s;
+    border-bottom: 1px solid transparent;
+    padding-bottom: 3px;
   }
 
 
 
 
+
 }
-
-
 
 
 
