--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -39,3 +39,9 @@ $bg: #f6f6f6;
   cursor: pointer;
 }
 
+@function max($numbers...) {
+  @return m#{a}x(#{$numbers});
+}
+@function min($numbers...) {
+  @return m#{i}n(#{$numbers});
+}
