--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -422,8 +422,57 @@
     border-bottom: 1px solid transparent;
     padding-bottom: 3px;
   }
+}
 
+.video-fashion {
+  background-color: $bg;
+  background-image: url('../images/decor/pattern.svg');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+  padding: 125px 0;
 
+  &__inner {
+    display: flex;
+  }
+
+  &__popup {
+    margin-right: 60px;
+    height: 480px;
+    max-width: 530px;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
+  }
+
+  &__content {
+    max-width: 570px;
+  }
+
+  &__subtitle {
+    padding-top: 75px;
+    color: $accent;
+    font-size: 22px;
+    text-transform: uppercase;
+    margin-bottom: 10px;
+  }
+
+  &__title,
+  &__text {
+    text-align: left;
+  }
+
+  &__text {
+    margin-bottom: 55px;
+  }
+
+  &__link {
+    @extend %btn;
+  }
 
 
 
