--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -473,14 +473,142 @@
   &__link {
     @extend %btn;
   }
-
-
-
 }
 
+.product {
+  padding: 105px 0 120px;
+  text-align: center;
 
+  &__items {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    // grid-template-rows: repeat(2, 1fr);
+    grid-gap: 45px 30px;
+  }
 
+  &__link {
+    text-transform: uppercase;
+    color: $title;
+    @extend %roboto-400;
+    border: 1px solid $accent;
+    padding: 12px 28px;
+    display: inline-block;
+    letter-spacing: 2.5px;
+    margin-top: 50px;
+  }
+}
 
+.product-item {
+  max-width: 370px;
+
+  &__img-box {
+    position: relative;
+    height: 370px;
+    overflow: hidden;
+    margin-bottom: 25px;
+  }
+
+  &__link-box {
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 50px;
+    background-color: #fff;
+    width: 220px;
+    height: 50px;
+    margin: 0 auto;
+    box-shadow: 0px 5px 30px 0px rgba(152, 152, 152, 0.2);
+    border-radius: 22px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    transform: translateY(300%);
+    transition: all .3s;
+  }
+
+  &__link--line::before,
+  &__link--line::after {
+    content: '';
+    position: absolute;
+    height: 30px;
+    width: 1px;
+    background-color: #ececec;
+    top: 11px
+  }
+
+  &__link--line::before {
+    right: 75px;
+  }
+
+  &__link--line::after {
+    left: 70px;
+  }
+
+  &__link {
+    display: inherit;
+
+    path {
+      transition: all .3s;
+    }
+  }
+
+  &__link:hover {
+    path {
+      fill: $accent;
+    }
+  }
+
+  &__images {
+    object-fit: cover;
+  }
+
+  &:hover {
+    .product-item__link-box {
+      transform: translateY(0);
+    }
+  }
+
+  &__title {
+    @extend %roboto-400;
+    font-size: 22px;
+    line-height: 26px;
+    color: $title;
+    padding: 15px 0 10px;
+  }
+
+  &__price {
+    display: flex;
+    justify-content: center;
+  }
+
+  &__new-price {
+    @extend %roboto-500;
+    color: $title;
+    padding-right: 21px;
+  }
+
+  &__old-price {
+    @extend %roboto-400;
+    color: #ccccce;
+    text-decoration: line-through;
+  }
+
+  &--sale {
+    .product-item__img-box::before {
+      content: 'SALE';
+      position: absolute;
+      top: 25px;
+      left: 25px;
+      letter-spacing: 0.8px;
+      padding: 2px 9px;
+      @extend %btn;
+    }
+  }
+}
+
+.star {
+  margin: 0 auto;
+}
 
 
 
